tests/semantic/invalid/duplicate_variable.src
fn main() -> int {
    int x = 10;
    int x = 20;
    return x;
}
